added openssl variable to binding.gyp, moved prepublish command to package.json

--- a/package.json
+++ b/package.json
@@ -53,6 +53,6 @@
   "scripts": {
     "test": "mocha",
     "install": "node-gyp rebuild",
-    "prepublish": "./build.sh"
+    "prepublish": "browserify  -r ./lib/utils-js.js:./utils -r buffer -r xxhashjs -r ./lib/lz4l.js:lz4 -o build/lz4.js lib/lz4l.js && minify build/lz4.js > build/lz4.min.js"
   }
 }
