renamed package to @scanreco/node-lz4, updated package.json and add workflow action for npm publish
renaming package to @scanreco/node-lz4

npm publish from branch test

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": {
     "name": "Pierre Curto"
   },
-  "name": "lz4",
+  "name": "@scanreco/node-lz4",
   "description": "LZ4 streaming compression and decompression",
   "keywords": [
     "lz4",
@@ -10,22 +10,22 @@
     "decompression",
     "stream"
   ],
-  "version": "0.6.3",
-  "homepage": "http://github.com/pierrec/node-lz4",
+  "version": "0.6.5",
+  "homepage": "http://github.com/scanreco/node-lz4",
   "repository": {
     "type": "git",
-    "url": "git://github.com/pierrec/node-lz4.git"
+    "url": "git://github.com/scanreco/node-lz4.git"
   },
   "main": "./lib/lz4.js",
   "browser": "./build/lz4.js",
   "bugs": {
-    "url": "http://github.com/pierrec/node-lz4/issues"
+    "url": "http://github.com/scanreco/node-lz4/issues"
   },
   "gypfile": true,
   "licenses": [
     {
       "type": "MIT",
-      "url": "http://github.com/pierrec/node-lz4/raw/master/LICENSE"
+      "url": "http://github.com/scanreco/node-lz4/raw/master/LICENSE"
     }
   ],
   "engines": {
